[project]
name = "fooocus"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shinshin86", email = "shinshin86npm@gmail.com" }
]
dependencies = [
    "Pillow==9.2.0",
    "accelerate==0.21.0",
    "einops==0.4.1",
    "gradio==3.41.2",
    "httpx==0.24.1",
    "numpy==1.23.5",
    "omegaconf==2.2.3",
    "opencv-contrib-python==4.8.0.74",
    "psutil==5.9.5",
    "pygit2==1.12.2",
    "pytorch_lightning==1.9.4",
    "pyyaml==6.0",
    "safetensors==0.3.1",
    "scipy==1.9.3",
    "torchsde==0.2.5",
    "tqdm==4.64.1",
    "transformers==4.30.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
